assets/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');

html, body {
  padding: 0;
  margin: 0;
}

.red {
  color: var(--bs-secondary);
}

.green {
  color: var(--bs-primary)
}

.full-screen {
  width: 100vw;
  height: 100vh;
}

.snow-bg {
  background-image: url('../img/blue-snow.png');
}

.stamp {
  position: absolute;
  right: 20px;
  top: 20px;
}

.handwriting {
  font-family: 'Shadows Into Light', cursive;
  font-size: 2em;
}

.flexible-spacing {
  margin-top: 3vh;
}
/* 
https://fonts.google.com/specimen/Shadows+Into+Light?category=Handwriting */

